--- a/StudentClient/Properties/launchSettings.json
+++ b/StudentClient/Properties/launchSettings.json
@@ -12,7 +12,8 @@
       "commandName": "IISExpress",
       "launchBrowser": true,
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "API_URL": "http//localhost:44308/"
       }
     },
     "StudentClient": {
